--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
         <div class="card">
             <div class="card-body">
-                
+                <div class="mb-3">
+                    <h5 class="card-title">Add title</h5>
+                    <input type="text" class="form-control" id="addTitle" aria-describedby="title" placeholder="Enter title">
+                    
+                  </div>
                 <h5 class="card-title">Add Note</h5>
                 <div class="form-group">
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
